<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_Comparison" Id="{4ba48f1e-17f2-075b-03e1-f6f1c9fe2c1d}">
    <Declaration><![CDATA[TYPE T_Comparison : E_COMPARISON; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>