<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_Position" Id="{6eb3ac3e-30e1-094d-0b8e-c13e8e2957bb}">
    <Declaration><![CDATA[TYPE T_Position : DINT; END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>