<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_LIST_NODE" Id="{d080d914-74f1-0d3c-30bc-1b2609895f2a}">
    <Declaration><![CDATA[// Node for linked list.
{attribute 'enable_dynamic_creation'}
TYPE ST_LIST_NODE:
STRUCT
	Data 		: T_Generic; // Stored data.
	pPrevious 	: POINTER TO ST_LIST_NODE; 	// Pointer to previous node.
	pNext 		: POINTER TO ST_LIST_NODE; 	// Pointer to next node.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>